apps/routers/sintache-stg/stg-service-endpoints.yaml
kind: Service
apiVersion: v1
metadata:
  name: stg-public-ingress
  namespace: sintache
spec:
  ports:
    - name: sintache-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
    - name: sintache-https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: stg-public-ingress
  namespace: sintache
subsets:
- addresses:
  - ip: 10.17.12.202
  ports:
  - port: 80
    name: sintache-http
  - port: 443
    name: sintache-https
