apps/routers/sintache-stg/stg-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sintache-stg
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`sintache.staging.hephy.pro`)
    services:
    - kind: Service
      name: stg-public-ingress
      namespace: sintache
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sintache-stg
  namespace: traefik-staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`sintache.staging.hephy.pro`)
    services:
    - name: stg-public-ingress
      namespace: sintache
      port: 443
  tls:
    secretName: sintache-stg-tls
    passthrough: true
